# pluto-event-generator

./: .clang-format  CMakeLists.txt  ChannelsDatabase.txt  ChannelsLambda1520.txt  ChannelsXi.txt  LICENSE  Makefile  PlutoGen.cc  README.md  config.h.in  job_script.sh  profile.sh.example  run_job.py
farm_tools/: job_script.sh  pp45_list.txt  run_job.py
